// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketView /> should have the hidden classes 1`] = `
<div
  class="page transition out fade right"
>
  <div
    class="headerContainer"
  >
    <div
      class="d-flex"
    >
      <div>
        TicketHeader
      </div>
    </div>
    <div
      class="viewersBanner hidden"
    />
  </div>
  <div
    class="ticketContent mt-3"
    tabindex="1"
  >
    <form
      class="d-print-none newMessageForm"
    >
      <div>
        ReplyMessageChannel
      </div>
      <div>
        TicketReplyArea
      </div>
      <button
        data-testid="TicketSubmitButtons"
        type="submit"
      >
        TicketSubmitButtons
      </button>
    </form>
  </div>
</div>
`;

exports[`<TicketView /> should not have the hidden classes 1`] = `
<div
  class="page"
>
  <div
    class="headerContainer"
  >
    <div
      class="d-flex"
    >
      <div>
        TicketHeader
      </div>
    </div>
    <div
      class="viewersBanner hidden"
    />
  </div>
  <div
    class="ticketContent mt-3"
    tabindex="1"
  >
    <form
      class="d-print-none newMessageForm"
    >
      <div>
        ReplyMessageChannel
      </div>
      <div>
        TicketReplyArea
      </div>
      <button
        data-testid="TicketSubmitButtons"
        type="submit"
      >
        TicketSubmitButtons
      </button>
    </form>
  </div>
</div>
`;
